--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,13 @@ matrix:
   fast_finish: true
   include:
     - os: linux
-      dist: trusty
+      dist: xenial
       sudo: false
-      dotnet: 2.2.3
+      dotnet: 2.2
       mono: none
     - os: osx
       osx_image: xcode9
-      dotnet: 2.2.3
+      dotnet: 2.2
       mono: none
 
 notifications:
