--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,18 @@
 language: csharp
 solution: libsodium-core.sln
 
-mono: none
-
-env:
-  global:
-    - DOTNET_CLI_TELEMETRY_OPTOUT: 1
-    - DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
-
-addons:
-  apt:
-    sources:
-      - sourceline: 'deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main'
-        key_url: 'https://packages.microsoft.com/keys/microsoft.asc'
-    packages:
-      - dotnet-hostfxr-1.0.1
-      - dotnet-sharedframework-microsoft.netcore.app-1.0.5
-
 matrix:
   fast_finish: true
   include:
     - os: linux
-      dist: trusty
+      dist: xenial
       sudo: false
-      dotnet: 2.0.0
+      dotnet: 2.2
+      mono: none
     - os: osx
       osx_image: xcode9
-      dotnet: 2.0.0
+      dotnet: 2.1.300
+      mono: none
 
 notifications:
   email:
