--- a/src/Sodium.Core/Sodium.Core.csproj
+++ b/src/Sodium.Core/Sodium.Core.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <PackageReference Include="libsodium" Version="1.0.17.1" />
     <PackageReference Include="System.Memory" Version="4.5.2" />
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
