--- a/templates/test.yml
+++ b/templates/test.yml
@@ -26,5 +26,5 @@ steps:
     displayName: Publish ${{ parameters.framework }} coverage results
     inputs:
       codeCoverageTool: "cobertura"
-      summaryFileLocation: "$(Build.SourcesDirectory)/TestResults/${{ parameters.framework }}/coverage.xml"
+      summaryFileLocation: "$(Build.SourcesDirectory)/TestResults/${{ parameters.framework }}/coverage.cobertura.xml"
     condition: and(succeeded(), eq('${{ parameters.collectCoverage }}', 'true'))
