--- a/templates/test.yml
+++ b/templates/test.yml
@@ -30,7 +30,7 @@ steps:
       summaryFileLocation: "$(Build.SourcesDirectory)/TestResults/${{ parameters.framework }}/coverage.cobertura.xml"
     condition: and(succeeded(), eq('${{ parameters.collectCoverage }}', 'true'))
 
-  - bash: <(curl -s https://codecov.io/bash)
+  - bash: bash <(curl -s https://codecov.io/bash)
     displayName: Upload code coverage to CodeCov
     env:
       CODECOV_TOKEN: ${{ parameters.codecovToken }}
