--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ _Ref/
 # Build Folders (you can keep bin if you'd like, to store dlls and pdbs)
 [Bb]in/
 [Oo]bj/
+[Nn]uget/
 
 # mstest test results
 TestResults
