Add Xamarin targets

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,22 +41,21 @@ build_script:
   - ps: |
       if ($env:APPVEYOR_REPO_BRANCH -eq "master")
       {
-        dotnet build "src\Sodium.Core" -c $env:CONFIGURATION
+        msbuild /t:build "src\Sodium.Core" /p:Configuration=$env:CONFIGURATION
       }
       else
       {
-        dotnet build "src\Sodium.Core" -c $env:CONFIGURATION --version-suffix $env:VERSION_SUFFIX
+        msbuild /t:build "src\Sodium.Core" /p:Configuration=$env:CONFIGURATION /p:version-suffix=$env:VERSION_SUFFIX
       }
-
 after_build:
   - ps: |
       if ($env:APPVEYOR_REPO_BRANCH -eq "master")
       {
-        dotnet pack "src\Sodium.Core" -c $env:CONFIGURATION --no-build -o $env:APPVEYOR_BUILD_FOLDER\artifacts
+        msbuild /t:pack "src\Sodium.Core" /p:Configuration=$env:CONFIGURATION /p:NoBuild=true /p:PackageOutputPath=$env:APPVEYOR_BUILD_FOLDER\artifacts
       }
       else
       {
-        dotnet pack "src\Sodium.Core" -c $env:CONFIGURATION --no-build --version-suffix $env:VERSION_SUFFIX -o $env:APPVEYOR_BUILD_FOLDER\artifacts
+        msbuild /t:pack "src\Sodium.Core" /p:Configuration=$env:CONFIGURATION /p:NoBuild=true /p:version-suffix=$env:VERSION_SUFFIX /p:PackageOutputPath=$env:APPVEYOR_BUILD_FOLDER\artifacts
       }
 
 test: off
