--- a/src/Sodium.Core/Sodium.Core.csproj
+++ b/src/Sodium.Core/Sodium.Core.csproj
@@ -45,6 +45,7 @@
 
   <ItemGroup>
     <PackageReference Include="libsodium" Version="1.0.18" />
+    <PackageReference Include="System.ValueTuple" Version="4.5.0" />
   </ItemGroup>
 
 </Project>
