--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,15 @@
-root=true
+root = true
+
+[*]
+charset = utf-8
+end_of_line = crlf
+indent_style = space
+insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.cs]
-indent_style = space
+indent_size = 4
+
+[*.{sln,csproj,json}]
 indent_size = 2
+
